gitops/external-frigate/http-route.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-frigate

---
apiVersion: v1
kind: Service
metadata:
  name: external-frigate
  namespace: external-frigate
spec:
  ports:
    - port: 8971
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-frigate
  namespace: external-frigate
  labels:
    kubernetes.io/service-name: external-frigate
addressType: IPv4
ports:
- name: http
  port: 8971
endpoints:
- addresses:
  - "10.0.0.9"
  conditions: {}

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cams-mtls-buc-sh
  namespace: external-frigate
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
    sectionName: mtls
  hostnames:
  - "cams.mtls.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: external-frigate
      port: 8971
      weight: 1
    matches:
    - method: GET
      path:
        type: PathPrefix
        value: /
    - method: POST
      path:
        type: PathPrefix
        value: /api/faces/train
    - method: POST
      path:
        type: PathPrefix
        value: /api/review/viewed
 
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: 403-denied
